Branding: Analog devices and Uberscopes logos and main page text.

--- a/resources/scopy.html
+++ b/resources/scopy.html
@@ -1,20 +1,37 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
+<!DOCTYPE HTML">
 <html>
-		<head>
-				<meta name="qrichtext" content="1" />
-				<style type="text/css">p, li { white-space: pre-wrap; } a:link { color: white; }</style>
-		</head>
-		<body style="font-size:18pt; font-weight:72; font-style:normal">
+<head>
+    <meta name="qrichtext" content="1" />
+    <style type="text/css">
+    p, li { white-space: pre-wrap; }
+    a:link { color: white; }
+    </style>
+</head>
+<body>
 <table>
- <tr>
+<tr>
    <td>
-   <h1>Welcome to Scopy!</h1><br><br>
-Scopy is a powerful toolbox for signal analysis and generation.<br><br>
-Please visit <a href="https://wiki.analog.com/university/tools/m2k/scopy">our wiki</a> for more information about Scopy.<br>
-If you need help, drop a message on our <a href="https://ez.analog.com/community/linux-device-drivers/linux-software-drivers">Engineer Zone</a>.<br>
+
+<h1>Welcome to Scopy!</h1>
+
+<p>Scopy is a powerful toolbox for signal analysis and generation.</p>
+
+<h2>Uberscopes</h2>
+
+<p>For more information about Uberscopes' instruments, please visit <a href="https://www.uberscopes.com">
+Uberscopes web page</a>. </p>
+
+<h2>Analog Devices</h2>
+
+<p>Please visit <a href="https://wiki.analog.com/university/tools/m2k/scopy">Analog Devices' wiki</a>
+ for more information about Scopy.</p>
+
+<p>If you need help, drop a message on Analog Devices' <a href="https://ez.analog.com/community/linux-device-drivers/linux-software-drivers">Engineer Zone</a>.</p>
+
 </td>
- </tr>
+</tr>
 
 </table>
-		</body>
+</body>
 </html>
+
