New render for us-mark-1.

--- a/resources/uberscope.html
+++ b/resources/uberscope.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
+
 <html>
 <head>
 <meta charset="UTF-8">
 </head>
 <body>
-<table>
- <tr>
-   <td><img src="qrc:/menu/us-mark-1.png"/></td>
- </tr>
-</table>
+    <img src='qrc:/menu/us-mark-1.png'>
 </body>
 </html>
